# libdaisy-rust

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config
.github/: bors.toml
.github/workflows/: ci.yml  clippy.yml  nightly.yml
examples/: blinky.rs  button.rs  delay.rs  flash.rs  hex-to-off.py  hid_blinky.rs  knob.rs  midi.rs  passthru.rs  sai.rs  sdmmc.rs  sdram.rs  switch.rs  toggle.rs  toggle2.rs  uart_midi.rs  usb_midi.rs  volume.rs
src/: audio.rs  board.rs  codec_ak4556.rs  codec_wm8731.rs  flash.rs  gpio.rs  hid.rs  lib.rs  logger.rs  main.rs  mpu.rs  prelude.rs  sdmmc.rs  sdram.rs  serial.rs  system.rs  uart.rs
