[package]
authors = ["Matthew Meyer <mtthw.meyer@gmail.com>"]
edition = "2018"
description = "Hardware Abstraction Layer implementation for Daisy boards"
keywords = ["cortex-m", "stm32h7xx", "stm32h750", "hal", "daisy"]
readme = "README.md"
name = "libdaisy"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/mtthw-meyer/libdaisy-rust.git"
documentation = "https://docs.rs/libdaisy"
exclude = [".gitignore"]

[dependencies]
cfg-if = "0.1.10"
cortex-m-rtic = "1.0.0"
cortex-m = "^0.7"
debouncr = "0.2.2"
log = "0.4.11"
micromath = "1.1.1"
panic-halt = "0.2.0"
stm32h7xx-hal = { version = "0.12.2", features = ["stm32h750v","rt","fmc", "xspi", "sdmmc", "sdmmc-fatfs", "usb_hs"] }
stm32-fmc = "0.2.2"
rtt-target = { version = "0.3.0", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"], optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"], optional = true  }
cortex-m-log = { version = "~0.7", features = ["itm", "semihosting", "log-integration"], optional = true  }
panic-itm = { version = "~0.4.2", optional = true  }
panic-semihosting = { version = "0.5.6", optional = true  }
cortex-m-semihosting = { version = "0.3.7", optional = true  }

[features]
default = []

log-rtt = ["rtt-target", "panic-rtt-target"]
log-itm = ["panic-itm", "lazy_static", "cortex-m-log"]
log-semihosting = ["panic-semihosting", "lazy_static", "cortex-m-log", "cortex-m-semihosting"]
log-none = []

# this lets you use `cargo fix`!
#[[bin]]
#name = "libdaisy-rust"
#test = false
#bench = false

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false
opt-level = "s" # optimize for binary size

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size

[dev_dependencies]
embedded-sdmmc = "0.3.0"
usbd-midi = { git = "https://github.com/btrepp/usbd-midi/" }
num_enum = { version = "0.5.1", default-features = false }
usb-device = "0.2.8"
